Posiciones, players y loop del juego